ADD Switch between llm moels. Currently only one model bc local
